--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <hr>
                     <div class="About">
                         <h5>About</h5>
-                        <p>A realest, who believes in God, passionate about what I do, love to make new friends and I'm new to programming. A sports lover; an Arsenal and a Lakers fan,a music person, I mean <b>good music</b>, also a lover of movies and can
+                        <p>A realist, who believes in God, passionate about what I do, love to make new friends and I'm new to programming. A sports lover; an Arsenal and a Lakers fan,a music person, I mean <b>good music</b>, also a lover of movies and can
                             be a foodie. Also interested in Historical events,and a little bit of Politics.</p>
                         <hr>
                     </div>
