--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <hr>
                     </div>
                     <div class="bottom-contact-form">
-                        <form action="bhennie411@gmail.com" id="contact-form" method="POST">
+                        <form action="https://mail.google.com/bhennie411@gmail.com" id="contact-form" method="POST">
                             <input type="text" name="Fullname" class="form-control" placeholder="First Last Name"><br><br>
                             <input type="text" name="Email" class="form-control" placeholder="Enter Email Address"><br><br>
                             <textarea name="comment" class="form-control" placeholder="Enter your comment" rows="6"></textarea><br><br>
